Sun Mar  2 13:13:23 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups:
   - change 'ups.delay.start' and 'ups.delay.shutdown' to server
     side variables that control the ondelay and offdelay for
     the 'shutdown.return' and 'shutdown.stayoff' instcmd's
   - create 'ups.timer.(start|shutdown|reboot)' that indicate the
     time before these respective timers elapse (read-only)
   - remove the test for ondelay>offdelay (the values can be
     changed at runtime too and for some devices we already know
     there may be legitimate reasons for doing so)

Sun Mar  2 12:39:48 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: The ne_parse_uri() function doesn't handle
   parsing uri's that don't contain a method how to connect. It is
   mandatory to specifiy this.

Sun Mar  2 12:23:29 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libhid.c: Fix incorrect size (usage paths are of type
   HIDNode_t, not long)

Sat Mar  1 19:28:19 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/hidparser.c, drivers/hidtypes.h, drivers/libhid.h:
   - reformattedhidparsersothatitnowhasmorewhitespace (and conforms
     to the preferred coding style regarding indentation)
   - removed nObject and nReports from HIDParser_t since they were
     not used (and would overflow if more than 255 Objects or Reports
     are found anyway)
   - changed the type of HIDNode_t from unsigned int to uint32_t

Sat Mar  1 19:24:09 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/liebert-hid.c: Add support for some additional params.

Sat Mar  1 19:01:16 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Use strtok_r() instead of strtok(), so that
   we don't accidentally interfer with the caller (strtok() is not
   guaranteed to be reentrant).

Sat Mar  1 18:47:52 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/netxml-ups:
   - fix decimal conversion (decimal was lost in conversion).